test/spec_vectors/local_tee/fail/module_27.wat
(module (func $type-param-arg-empty-vs-num-in-local.set (param i32) (local.set 0 (local.tee 0)) (local.get 0) (drop)))